fix(rpm): Risolti problemi di compatibilità Poetry 1.x e comando non trovato
Risolve il fallimento nel job 'Build RPM Package' assicurando che:
- La conversione del pyproject.toml al formato Poetry 1.x avvenga prima dell'installazione delle dipendenze.
- Venga rimosso l'export problematico del PATH che causava 'poetry command not found'.
- Venga aggiunto un passaggio di debug per verificare la disponibilità e la versione di Poetry.
- Il pyproject.toml originale venga sempre ripristinato.

--- a/.github/workflows/build-and-release.yml
+++ b/.github/workflows/build-and-release.yml
@@ -344,11 +344,6 @@ jobs:
         run: |
           dnf install -y rpm-build rpmlint python3-devel python3-setuptools python3-pip python3-wheel pyproject-rpm-macros python3-poetry
 
-      - name: Install project dependencies with Poetry
-        run: |
-          export PATH="/usr/bin:$PATH"
-          poetry install --no-root
-
       - name: Convert pyproject.toml for Poetry 1.x
         run: |
           # Ensure toml is installed for the conversion script
@@ -366,6 +361,18 @@ jobs:
 
           # Sostituisci con la versione compatibile con Poetry 1.x
           mv pyproject.toml.poetry1x pyproject.toml
+
+      - name: Debug Poetry Path
+        run: |
+          echo "PATH: $PATH"
+          which poetry
+          poetry --version
+
+      - name: Install project dependencies with Poetry
+        run: |
+          poetry install --no-root
+
+
 
       - name: Create source tarball
         run: |
