fix(ci): Usa 'command -v' al posto di 'which' per il debug del percorso Poetry
Rimpiazza 'which poetry' con 'command -v poetry' nel passaggio 'Debug Poetry Path'
del workflow di build RPM. Questo risolve l'errore 'which: command not found'
riscontrato nell'ambiente container Fedora, poiché 'command -v' è un modo più
portatile e conforme a POSIX per localizzare gli eseguibili.

--- a/.github/workflows/build-and-release.yml
+++ b/.github/workflows/build-and-release.yml
@@ -365,7 +365,7 @@ jobs:
       - name: Debug Poetry Path
         run: |
           echo "PATH: $PATH"
-          which poetry
+          command -v poetry
           poetry --version
 
       - name: Install project dependencies with Poetry
