fix(ci): Quote POETRY_BIN in source tarball creation step
Encloses the POETRY_BIN variable in double quotes within the 'Create source tarball'
step of the RPM build workflow. This ensures that the dynamically located 'poetry'
executable is correctly invoked, resolving the 'build: command not found' error.

--- a/.github/workflows/build-and-release.yml
+++ b/.github/workflows/build-and-release.yml
@@ -381,7 +381,7 @@ jobs:
       - name: Create source tarball
         run: |
           mkdir -p ~/rpmbuild/SOURCES/
-          $POETRY_BIN build --format sdist
+          "$POETRY_BIN" build --format sdist
           mv dist/*.tar.gz ~/rpmbuild/SOURCES/devildex-0.2.1.tar.gz
 
       - name: Restore original pyproject.toml
