--- a/.github/workflows/build-and-release.yml
+++ b/.github/workflows/build-and-release.yml
@@ -397,7 +397,7 @@ jobs:
 
   create-and-upload-release:
     runs-on: ubuntu-latest
-    needs: [build-rpm-package]
+    needs: [build-linux-wheel, build-macos-wheel, build-windows-wheel, build-deb-package, build-package, build-docs, build-rpm-package]
     outputs:
       release_version: ${{ steps.get_version.outputs.version }}
     steps:
