--- a/.github/workflows/build-and-release.yml
+++ b/.github/workflows/build-and-release.yml
@@ -195,20 +195,11 @@ jobs:
       - name: Export requirements.txt
         run: poetry export -f requirements.txt --output requirements.txt --without-hashes
 
-      - name: Find Poetry Executable
-        id: find_poetry
-        run: |
-          POETRY_PATH=$(find /usr -name poetry -type f -executable | head -n 1)
-          if [ -z "$POETRY_PATH" ]; then
-            echo "Error: Poetry executable not found!"
-            exit 1
-          fi
-          echo "Found Poetry at: $POETRY_PATH"
-          echo "POETRY_BIN=$POETRY_PATH" >> "$GITHUB_ENV"
+
 
       - name: Install project dependencies with Poetry
         run: |
-          $POETRY_BIN install --no-root
+          poetry install --no-root
 
       - name: Install OS-specific dependencies (Linux)
         if: runner.os == 'Linux'
