--- a/.github/workflows/test-packaged-app.yml
+++ b/.github/workflows/test-packaged-app.yml
@@ -106,6 +106,21 @@ jobs:
       - name: List downloaded files (PyInstaller macOS)
         run: ls -R build/macos-latest/
 
+  test-pyinstaller-linux-package:
+    runs-on: ubuntu-latest
+    if: ${{ github.event.workflow_run.conclusion == 'success' }}
+    steps:
+      - name: Download PyInstaller Linux bundle
+        uses: actions/download-artifact@v4
+        with:
+          name: devildex-linux-bundle
+          path: build/ubuntu-latest/
+          run-id: ${{ github.event.workflow_run.id }}
+          github-token: ${{ secrets.GITHUB_TOKEN }}
+          repository: ${{ github.repository }}
+      - name: List downloaded files (PyInstaller Linux)
+        run: ls -R build/ubuntu-latest/
+
   test-rpm-package:
     runs-on: ubuntu-latest
     if: ${{ github.event.workflow_run.conclusion == 'success' }}
