--- a/.github/workflows/test-packaged-app.yml
+++ b/.github/workflows/test-packaged-app.yml
@@ -25,8 +25,15 @@ jobs:
 
       - name: Test Built Application (Windows)
         run: |
-          Start-Process -FilePath ".\build\devildex_windows.exe" -NoNewWindow -PassThru | Wait-Process -Timeout 20
-          Stop-Process -Name "devildex_windows.exe" -ErrorAction SilentlyContinue
+          $process = Start-Process -FilePath ".\build\devildex_windows.exe" -NoNewWindow -PassThru
+          Start-Sleep -Seconds 30
+          if ($process.HasExited) {
+              Write-Error "Application exited prematurely."
+              exit 1
+          } else {
+              Stop-Process -Id $process.Id -ErrorAction SilentlyContinue
+              Write-Host "Application remained running for 30 seconds."
+          }
 
   test-macos-package:
     runs-on: macos-latest
@@ -48,8 +55,15 @@ jobs:
         run: |
           chmod +x ./build/devildex_macos
           ./build/devildex_macos &
-          sleep 20
-          kill %1
+          PID=$!
+          sleep 30
+          if ps -p $PID > /dev/null; then
+              kill $PID
+              echo "Application remained running for 30 seconds."
+          else
+              echo "Application exited prematurely."
+              exit 1
+          fi
 
   test-linux-package:
     runs-on: ubuntu-latest
@@ -73,8 +87,15 @@ jobs:
           sudo apt-get install -y ./build/deb/*.deb
           export PATH="/usr/bin:$PATH"
           devildex &
-          sleep 20
-          kill %1
+          PID=$!
+          sleep 30
+          if ps -p $PID > /dev/null; then
+              kill $PID
+              echo "Application remained running for 30 seconds."
+          else
+              echo "Application exited prematurely."
+              exit 1
+          fi
 
   test-linux-wheel-package:
     runs-on: ubuntu-latest
@@ -95,7 +116,7 @@ jobs:
       - name: Test Installed Wheel (Linux)
         run: |
           pip install ./build/wheel/*.whl
-          python -c "import devildex; print('devildex imported successfully')"
+          python -c "import devildex; import subprocess; p = subprocess.Popen(['devildex']); import time; time.sleep(30); p.poll() or p.terminate(); exit(0) if p.returncode is None else exit(1)"
 
   test-pyinstaller-windows-package:
     runs-on: windows-latest
@@ -114,8 +135,15 @@ jobs:
 
       - name: Test Built Application (PyInstaller Windows)
         run: |
-          Start-Process -FilePath ".\build\windows-latest\devildex_windows.exe" -NoNewWindow -PassThru | Wait-Process -Timeout 20
-          Stop-Process -Name "devildex_windows.exe" -ErrorAction SilentlyContinue
+          $process = Start-Process -FilePath ".\build\windows-latest\devildex_windows.exe" -NoNewWindow -PassThru
+          Start-Sleep -Seconds 30
+          if ($process.HasExited) {
+              Write-Error "Application exited prematurely."
+              exit 1
+          } else {
+              Stop-Process -Id $process.Id -ErrorAction SilentlyContinue
+              Write-Host "Application remained running for 30 seconds."
+          }
 
   test-pyinstaller-macos-package:
     runs-on: macos-latest
@@ -136,8 +164,15 @@ jobs:
         run: |
           chmod +x ./build/macos-latest/devildex_macos
           ./build/macos-latest/devildex_macos &
-          sleep 20
-          kill %1
+          PID=$!
+          sleep 30
+          if ps -p $PID > /dev/null; then
+              kill $PID
+              echo "Application remained running for 30 seconds."
+          else
+              echo "Application exited prematurely."
+              exit 1
+          fi
 
   test-pyinstaller-linux-package:
     runs-on: ubuntu-latest
@@ -158,8 +193,15 @@ jobs:
         run: |
           chmod +x ./build/ubuntu-latest/devildex_linux
           ./build/ubuntu-latest/devildex_linux &
-          sleep 20
-          kill %1
+          PID=$!
+          sleep 30
+          if ps -p $PID > /dev/null; then
+              kill $PID
+              echo "Application remained running for 30 seconds."
+          else
+              echo "Application exited prematurely."
+              exit 1
+          fi
 
   test-rpm-package:
     runs-on: fedora-latest
@@ -180,5 +222,12 @@ jobs:
         run: |
           sudo dnf install -y ./build/rpm/*.rpm
           devildex &
-          sleep 20
-          kill %1
+          PID=$!
+          sleep 30
+          if ps -p $PID > /dev/null; then
+              kill $PID
+              echo "Application remained running for 30 seconds."
+          else
+              echo "Application exited prematurely."
+              exit 1
+          fi
