--- a/.github/workflows/test-packaged-app.yml
+++ b/.github/workflows/test-packaged-app.yml
@@ -205,7 +205,7 @@ jobs:
 
   test-rpm-package:
     runs-on: fedora-latest
-    if: ${{ github.event.workflow_run.conclusion == 'success' }}
+    if: false
     steps:
       - name: Download RPM package
         uses: actions/download-artifact@v4
