--- a/.github/workflows/build-and-release.yml
+++ b/.github/workflows/build-and-release.yml
@@ -159,7 +159,7 @@ jobs:
       - name: Set up Python
         uses: actions/setup-python@v5
         with:
-          python-version: "3.11" # Use a consistent Python version
+          python-version: "3.13" # Use a consistent Python version
 
       - name: Copy pyproject.toml for Windows
         if: runner.os == 'Windows'
@@ -190,7 +190,7 @@ jobs:
         run: pip install "wxpython==4.2.3"
       - name: Install wxPython
         if: runner.os == 'Linux'
-        run: pip install "https://extras.wxpython.org/wxPython4/extras/linux/gtk3/ubuntu-22.04/wxPython-4.2.2-cp311-cp311-linux_x86_64.whl"
+        run: pip install "https://extras.wxpython.org/wxPython4/extras/linux/gtk3/ubuntu-24.04/wxPython-4.2.2-cp313-cp313-linux_x86_64.whl"
 
       - name: Export requirements.txt
         run: poetry export -f requirements.txt --output requirements.txt --without-hashes
@@ -391,57 +391,66 @@ jobs:
     runs-on: ubuntu-latest
     needs: [build-linux-wheel, build-macos-wheel, build-windows-wheel, build-deb-package, build-package, build-docs, build-rpm-package]
     outputs:
-      release_version: ${{ steps.get_version.outputs.version }}
+      release_version: ${{ steps.calculate_version.outputs.next_version }}
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Get version from commit message
-        id: get_version
+      - name: Extract release type and current version
+        id: calculate_version
         run: |
-          VERSION=$(echo "${{ github.event.head_commit.message }}" | grep -oP 'release\((\d+\.\d+\.\d+)\):' | sed -E 's/release\((.*)\):/\1/')
-          echo "Extracted version: $VERSION"
-          if [ -z "$VERSION" ]; then
-            echo "No version found in commit message. Skipping release."
-            echo "version=null" >> "$GITHUB_OUTPUT"
-          else
-            echo "version=$VERSION" >> "$GITHUB_OUTPUT"
+          COMMIT_MESSAGE="${{ github.event.head_commit.message }}"
+          RELEASE_TYPE=$(echo "$COMMIT_MESSAGE" | grep -oP 'release\((patch|minor|major)\):' | sed -E 's/release\((.*)\):/\1/')
+          echo "Extracted release type: $RELEASE_TYPE"
+
+          if [ -z "$RELEASE_TYPE" ]; then
+            echo "No release type found in commit message. Skipping release."
+            echo "release_type=null" >> "$GITHUB_OUTPUT"
+            echo "current_version=null" >> "$GITHUB_OUTPUT"
+            echo "next_version=null" >> "$GITHUB_OUTPUT"
+            exit 0
           fi
 
+          CURRENT_VERSION=$(grep -oP 'version = "\K(\d+\.\d+\.\d+)' pyproject.toml | head -1)
+          echo "Current version from pyproject.toml: $CURRENT_VERSION"
+
+          echo "release_type=$RELEASE_TYPE" >> "$GITHUB_OUTPUT"
+          echo "current_version=$CURRENT_VERSION" >> "$GITHUB_OUTPUT"
+
       - name: Delete existing GitHub Release (if any)
-        if: steps.get_version.outputs.version != 'null'
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        if: steps.calculate_version.outputs.next_version != 'null'
         run: |
           set +e
-          gh release delete v${{ steps.get_version.outputs.version }} --yes
+          gh release delete v${{ steps.calculate_version.outputs.next_version }} --yes
           set -e
 
       - name: Delete existing Git Tag (if any)
-        if: steps.get_version.outputs.version != 'null'
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        if: steps.calculate_version.outputs.next_version != 'null'
         run: |
           set +e
-          git push origin --delete v${{ steps.get_version.outputs.version }}
+          git push origin --delete v${{ steps.calculate_version.outputs.next_version }}
           set -e
 
       - name: Download Linux Wheel
-        if: steps.get_version.outputs.version != 'null'
+        if: steps.calculate_version.outputs.next_version != 'null'
         uses: actions/download-artifact@v4
         with:
           name: devildex-linux-wheel-artifact
           path: dist/linux-wheel
 
       - name: Download Linux Bundle
-        if: steps.get_version.outputs.version != 'null'
+        if: steps.calculate_version.outputs.next_version != 'null'
         uses: actions/download-artifact@v4
         with:
           name: devildex-linux-bundle
           path: dist/linux-bundle
 
       - name: Download Debian Package
-        if: steps.get_version.outputs.version != 'null'
+        if: steps.calculate_version.outputs.next_version != 'null'
         uses: actions/download-artifact@v4
         with:
           name: devildex-debian-package
@@ -450,7 +459,8 @@ jobs:
 
 
       - name: Download macOS Wheel
-        if: steps.get_version.outputs.version != 'null'
+              - name: Download macOS Wheel
+        if: steps.calculate_version.outputs.next_version != 'null'
         uses: actions/download-artifact@v4
         with:
           name: devildex-macos-wheel-artifact
@@ -459,7 +469,7 @@ jobs:
 
 
       - name: Download macOS Bundle
-        if: steps.get_version.outputs.version != 'null'
+        if: steps.calculate_version.outputs.next_version != 'null'
         uses: actions/download-artifact@v4
         with:
           name: devildex-macos-bundle
@@ -468,7 +478,8 @@ jobs:
 
 
       - name: Download Windows Wheel
-        if: steps.get_version.outputs.version != 'null'
+              - name: Download Windows Wheel
+        if: steps.calculate_version.outputs.next_version != 'null'
         uses: actions/download-artifact@v4
         with:
           name: devildex-windows-wheel-artifact
@@ -477,14 +488,14 @@ jobs:
 
 
       - name: Download Windows Bundle
-        if: steps.get_version.outputs.version != 'null'
+        if: steps.calculate_version.outputs.next_version != 'null'
         uses: actions/download-artifact@v4
         with:
           name: devildex-windows-bundle
           path: dist/windows-bundle
 
       - name: Unzip Windows Bundle artifact
-        if: steps.get_version.outputs.version != 'null'
+        if: steps.calculate_version.outputs.next_version != 'null'
         run: |
           pwd
           ls -R .
@@ -493,14 +504,14 @@ jobs:
 
 
       - name: Download Documentation
-        if: steps.get_version.outputs.version != 'null'
+        if: steps.calculate_version.outputs.next_version != 'null'
         uses: actions/download-artifact@v4
         with:
           name: devildex-documentation-artifact
           path: dist/documentation
 
       - name: Unzip Documentation artifact
-        if: steps.get_version.outputs.version != 'null'
+        if: steps.calculate_version.outputs.next_version != 'null'
         run: |
           pwd
           ls -R .
@@ -508,130 +519,128 @@ jobs:
 
       - name: Create Release
         id: create_release
-        if: steps.get_version.outputs.version != 'null'
+        if: steps.calculate_version.outputs.next_version != 'null'
         uses: actions/create-release@v1
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          tag_name: v${{ steps.get_version.outputs.version }}
-          release_name: Release v${{ steps.get_version.outputs.version }}
-          body: "Release v${{ steps.get_version.outputs.version }}"
+          tag_name: v${{ steps.calculate_version.outputs.next_version }}
+          release_name: Release v${{ steps.calculate_version.outputs.next_version }}
+          body: "Release v${{ steps.calculate_version.outputs.next_version }}"
           draft: false
           prerelease: false
 
       - name: Find Linux Wheel path
         id: find_linux_wheel
-        if: steps.get_version.outputs.version != 'null'
+        if: steps.calculate_version.outputs.next_version != 'null'
         run: echo "LINUX_WHEEL_PATH=$(find dist/linux-wheel -name "*.whl" | head -n 1)" >> "$GITHUB_OUTPUT"
 
       - name: Upload Linux Wheel asset
-        if: steps.get_version.outputs.version != 'null'
+        if: steps.calculate_version.outputs.next_version != 'null'
         uses: actions/upload-release-asset@v1
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
           asset_path: ${{ steps.find_linux_wheel.outputs.LINUX_WHEEL_PATH }}
-          asset_name: devildex-linux-wheel-v${{ steps.get_version.outputs.version }}.whl
+          asset_name: devildex-linux-wheel-v${{ steps.calculate_version.outputs.next_version }}.whl
           asset_content_type: application/zip
 
       - name: Upload Linux Bundle asset
-        if: steps.get_version.outputs.version != 'null'
+        if: steps.calculate_version.outputs.next_version != 'null'
         uses: actions/upload-release-asset@v1
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
           asset_path: ./dist/linux-bundle/devildex_linux
-          asset_name: devildex-linux-bundle-v${{ steps.get_version.outputs.version }}
+          asset_name: devildex-linux-bundle-v${{ steps.calculate_version.outputs.next_version }}
           asset_content_type: application/octet-stream
 
       - name: Find Debian Package path
         id: find_debian_package
-        if: steps.get_version.outputs.version != 'null'
+        if: steps.calculate_version.outputs.next_version != 'null'
         run: echo "DEBIAN_PACKAGE_PATH=$(find dist/debian-package -name "*.deb" | head -n 1)" >> "$GITHUB_OUTPUT"
 
       - name: Upload Debian Package asset
-        if: steps.get_version.outputs.version != 'null'
+        if: steps.calculate_version.outputs.next_version != 'null'
         uses: actions/upload-release-asset@v1
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
           asset_path: ${{ steps.find_debian_package.outputs.DEBIAN_PACKAGE_PATH }}
-          asset_name: devildex-debian-package-v${{ steps.get_version.outputs.version }}.deb
+          asset_name: devildex-debian-package-v${{ steps.calculate_version.outputs.next_version }}.deb
           asset_content_type: application/vnd.debian.binary-package
 
       - name: Find macOS Wheel path
         id: find_macos_wheel
-        if: steps.get_version.outputs.version != 'null'
+        if: steps.calculate_version.outputs.next_version != 'null'
         run: echo "MACOS_WHEEL_PATH=$(find dist/macos-wheel -name "*.whl" | head -n 1)" >> "$GITHUB_OUTPUT"
 
       - name: Upload macOS Wheel asset
-        if: steps.get_version.outputs.version != 'null'
+        if: steps.calculate_version.outputs.next_version != 'null'
         uses: actions/upload-release-asset@v1
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
           asset_path: ${{ steps.find_macos_wheel.outputs.MACOS_WHEEL_PATH }}
-          asset_name: devildex-macos-wheel-v${{ steps.get_version.outputs.version }}.whl
+          asset_name: devildex-macos-wheel-v${{ steps.calculate_version.outputs.next_version }}.whl
           asset_content_type: application/zip
 
       - name: Upload macOS Bundle asset
-        if: steps.get_version.outputs.version != 'null'
+        if: steps.calculate_version.outputs.next_version != 'null'
         uses: actions/upload-release-asset@v1
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
           asset_path: ./dist/macos-bundle/devildex_macos
-          asset_name: devildex-macos-bundle-v${{ steps.get_version.outputs.version }}
+          asset_name: devildex-macos-bundle-v${{ steps.calculate_version.outputs.next_version }}
           asset_content_type: application/octet-stream
 
-      - name: Find Windows Wheel path
-        id: find_windows_wheel
-        if: steps.get_version.outputs.version != 'null'
+if: steps.calculate_version.outputs.next_version != 'null'
         run: echo "WINDOWS_WHEEL_PATH=$(find dist/windows-wheel -name "*.whl" | head -n 1)" >> "$GITHUB_OUTPUT"
 
       - name: Upload Windows Wheel asset
-        if: steps.get_version.outputs.version != 'null'
+        if: steps.calculate_version.outputs.next_version != 'null'
         uses: actions/upload-release-asset@v1
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
           asset_path: ${{ steps.find_windows_wheel.outputs.WINDOWS_WHEEL_PATH }}
-          asset_name: devildex-windows-wheel-v${{ steps.get_version.outputs.version }}.whl
+          asset_name: devildex-windows-wheel-v${{ steps.calculate_version.outputs.next_version }}.whl
           asset_content_type: application/zip
 
       - name: Upload Windows Bundle asset
-        if: steps.get_version.outputs.version != 'null'
+        if: steps.calculate_version.outputs.next_version != 'null'
         uses: actions/upload-release-asset@v1
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
           asset_path: ./dist/windows-bundle/devildex_windows.exe
-          asset_name: devildex-windows-bundle-v${{ steps.get_version.outputs.version }}.exe
+          asset_name: devildex-windows-bundle-v${{ steps.calculate_version.outputs.next_version }}.exe
           asset_content_type: application/octet-stream
 
 
 
       - name: Zip Documentation
-        if: steps.get_version.outputs.version != 'null'
+        if: steps.calculate_version.outputs.next_version != 'null'
         run: |
           cd dist/documentation
-          zip -r devildex-documentation-v${{ steps.get_version.outputs.version }}.zip .
+          zip -r devildex-documentation-v${{ steps.calculate_version.outputs.next_version }}.zip .
           cd ../..
 
       - name: Upload Documentation asset
-        if: steps.get_version.outputs.version != 'null'
+        if: steps.calculate_version.outputs.next_version != 'null'
         uses: actions/upload-release-asset@v1
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: ./dist/documentation/devildex-documentation-v${{ steps.get_version.outputs.version }}.zip
-          asset_name: devildex-documentation-v${{ steps.get_version.outputs.version }}.zip
+          asset_path: ./dist/documentation/devildex-documentation-v${{ steps.calculate_version.outputs.next_version }}.zip
+          asset_name: devildex-documentation-v${{ steps.calculate_version.outputs.next_version }}.zip
           asset_content_type: application/zip
