--- a/.github/workflows/build-and-release.yml
+++ b/.github/workflows/build-and-release.yml
@@ -459,7 +459,6 @@ jobs:
 
 
       - name: Download macOS Wheel
-              - name: Download macOS Wheel
         if: steps.calculate_version.outputs.next_version != 'null'
         uses: actions/download-artifact@v4
         with:
@@ -478,7 +477,6 @@ jobs:
 
 
       - name: Download Windows Wheel
-              - name: Download Windows Wheel
         if: steps.calculate_version.outputs.next_version != 'null'
         uses: actions/download-artifact@v4
         with:
@@ -618,7 +616,7 @@ if: steps.calculate_version.outputs.next_version != 'null'
         if: steps.calculate_version.outputs.next_version != 'null'
         uses: actions/upload-release-asset@v1
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
           asset_path: ./dist/windows-bundle/devildex_windows.exe
