--- a/.github/workflows/test-packaged-app.yml
+++ b/.github/workflows/test-packaged-app.yml
@@ -7,7 +7,8 @@ on:
       - completed
 
 jobs:
-  test-windows-package:
+  test-windows-pyinstaller-bundle:
+    name: Test Windows PyInstaller Bundle
     runs-on: windows-latest
     if: ${{ github.event.workflow_run.conclusion == 'success' }}
     steps:
@@ -35,7 +36,8 @@ jobs:
               Write-Host "Application remained running for 30 seconds."
           }
 
-  test-macos-package:
+  test-macos-pyinstaller-bundle:
+    name: Test macOS PyInstaller Bundle
     runs-on: macos-latest
     if: ${{ github.event.workflow_run.conclusion == 'success' }}
     steps:
@@ -65,7 +67,8 @@ jobs:
               exit 1
           fi
 
-  test-linux-package:
+  test-linux-debian-package:
+    name: Test Linux Debian Package
     runs-on: ubuntu-latest
     if: ${{ github.event.workflow_run.conclusion == 'success' }}
     steps:
@@ -110,6 +113,7 @@ jobs:
           fi
 
   test-linux-wheel-package:
+    name: Test Linux Wheel Package
     runs-on: ubuntu-latest
     if: ${{ github.event.workflow_run.conclusion == 'success' }}
     steps:
@@ -136,7 +140,8 @@ jobs:
           pip install "wxpython @ https://extras.wxpython.org/wxPython4/extras/linux/gtk3/ubuntu-24.04/wxPython-4.2.2-cp313-cp313-linux_x86_64.whl"
           python -c "import devildex; import subprocess; p = subprocess.Popen(['devildex']); import time; time.sleep(30); p.poll() or p.terminate(); exit(0) if p.returncode is None else exit(1)"
 
-  test-pyinstaller-windows-package:
+  test-windows-pyinstaller-bundle-pyinstaller-job:
+    name: Test Windows PyInstaller Bundle (PyInstaller Job)
     runs-on: windows-latest
     if: ${{ github.event.workflow_run.conclusion == 'success' }}
     steps:
@@ -163,7 +168,8 @@ jobs:
               Write-Host "Application remained running for 30 seconds."
           }
 
-  test-pyinstaller-macos-package:
+  test-macos-pyinstaller-bundle-pyinstaller-job:
+    name: Test macOS PyInstaller Bundle (PyInstaller Job)
     runs-on: macos-latest
     if: ${{ github.event.workflow_run.conclusion == 'success' }}
     steps:
@@ -192,7 +198,8 @@ jobs:
               exit 1
           fi
 
-  test-pyinstaller-linux-package:
+  test-linux-pyinstaller-bundle:
+    name: Test Linux PyInstaller Bundle
     runs-on: ubuntu-latest
     if: ${{ github.event.workflow_run.conclusion == 'success' }}
     steps:
@@ -224,6 +231,7 @@ jobs:
           fi
 
   test-rpm-package:
+    name: Test RPM Package
     runs-on: ubuntu-latest
     container:
       image: fedora:latest
