--- a/.github/workflows/build-and-release.yml
+++ b/.github/workflows/build-and-release.yml
@@ -15,6 +15,7 @@ permissions:
 
 jobs:
   build-linux-wheel:
+    if: false
     name: Build Linux Wheel
     runs-on: ubuntu-24.04
 
@@ -59,6 +60,7 @@ jobs:
           path: dist/*.whl
 
   build-macos-wheel:
+    if: false
     name: Build macOS Wheel
     runs-on: macos-latest
 
@@ -109,6 +111,7 @@ jobs:
           path: dist/*.whl
 
   build-deb-package:
+    if: false
     name: Build Debian Package
     runs-on: ubuntu-latest
     steps:
@@ -148,7 +151,7 @@ jobs:
     name: Build Pyinstaller Pkg
     strategy:
       matrix: 
-        os: [windows-latest, macos-latest, ubuntu-latest]
+        os: [windows-latest]
 
     runs-on: ${{ matrix.os }}
 
@@ -256,6 +259,7 @@ jobs:
 
 
   build-docs:
+    if: false
     name: Build Documentation
     runs-on: ubuntu-24.04
     steps:
@@ -304,6 +308,7 @@ jobs:
           path: "build/html"
 
   deploy-docs:
+    if: false
     name: Deploy Documentation to GitHub Pages
     needs: build-docs
     runs-on: ubuntu-latest
@@ -330,6 +335,7 @@ jobs:
         uses: actions/deploy-pages@v4
 
   build-rpm-package:
+    if: false
     name: Build RPM Package
     runs-on: ubuntu-latest
     container:
@@ -389,6 +395,7 @@ jobs:
           path: ~/rpmbuild/RPMS/x86_64/*.rpm
 
   create-and-upload-release:
+    if: false
     runs-on: ubuntu-latest
     needs: [build-linux-wheel, build-macos-wheel, build-windows-wheel, build-deb-package, build-package, build-docs, build-rpm-package]
     outputs:
