--- a/.github/workflows/test-packaged-app.yml
+++ b/.github/workflows/test-packaged-app.yml
@@ -37,6 +37,7 @@ jobs:
           }
 
   test-macos-pyinstaller-bundle:
+    if: false
     name: Test macOS PyInstaller Bundle
     runs-on: macos-latest
     if: ${{ github.event.workflow_run.conclusion == 'success' }}
@@ -68,6 +69,7 @@ jobs:
           fi
 
   test-linux-debian-package:
+    if: false
     name: Test Linux Debian Package
     runs-on: ubuntu-latest
     if: ${{ github.event.workflow_run.conclusion == 'success' }}
@@ -113,6 +115,7 @@ jobs:
           fi
 
   test-linux-wheel-package:
+    if: false
     name: Test Linux Wheel Package
     runs-on: ubuntu-latest
     if: ${{ github.event.workflow_run.conclusion == 'success' }}
@@ -141,6 +144,7 @@ jobs:
           python -c "import devildex; import subprocess; p = subprocess.Popen(['devildex']); import time; time.sleep(30); p.poll() or p.terminate(); exit(0) if p.returncode is None else exit(1)"
 
   test-windows-pyinstaller-bundle-pyinstaller-job:
+    if: false
     name: Test Windows PyInstaller Bundle (PyInstaller Job)
     runs-on: windows-latest
     if: ${{ github.event.workflow_run.conclusion == 'success' }}
@@ -169,6 +173,7 @@ jobs:
           }
 
   test-macos-pyinstaller-bundle-pyinstaller-job:
+    if: false
     name: Test macOS PyInstaller Bundle (PyInstaller Job)
     runs-on: macos-latest
     if: ${{ github.event.workflow_run.conclusion == 'success' }}
@@ -199,6 +204,7 @@ jobs:
           fi
 
   test-linux-pyinstaller-bundle:
+    if: false
     name: Test Linux PyInstaller Bundle
     runs-on: ubuntu-latest
     if: ${{ github.event.workflow_run.conclusion == 'success' }}
@@ -231,6 +237,7 @@ jobs:
           fi
 
   test-rpm-package:
+    if: false
     name: Test RPM Package
     runs-on: ubuntu-latest
     container:
