--- a/.github/workflows/build-and-release.yml
+++ b/.github/workflows/build-and-release.yml
@@ -188,6 +188,9 @@ jobs:
         if: runner.os == 'Linux'
         run: pip install "https://extras.wxpython.org/wxPython4/extras/linux/gtk3/ubuntu-24.04/wxPython-4.2.2-cp313-cp313-linux_x86_64.whl"
 
+      - name: Install Poetry
+        run: pip install poetry
+
       - name: Export requirements.txt
         run: poetry export -f requirements.txt --output requirements.txt
 
