--- a/.github/workflows/build-and-release.yml
+++ b/.github/workflows/build-and-release.yml
@@ -15,6 +15,8 @@ permissions:
 
 jobs:
   build-linux-wheel:
+    runs-on: ubuntu-latest
+    steps:
       - name: Generate platform-specific pyproject.toml
         run: |
           python scripts/generate_pyproject_toml.py pyproject.toml ${{ runner.os }} > pyproject.toml.tmp
@@ -81,6 +83,8 @@ jobs:
 
   build-windows-wheel:
     name: Build Windows Wheel
+    runs-on: windows-latest
+    steps:
       - name: Install toml library
         run: pip install toml
       - name: Generate platform-specific pyproject.toml
