--- a/.github/workflows/build-and-release.yml
+++ b/.github/workflows/build-and-release.yml
@@ -19,6 +19,10 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
+      - name: Set up Python 3.13
+        uses: actions/setup-python@v5
+        with:
+          python-version: "3.13"
       - name: Install toml library
         run: pip install toml
       - name: Generate platform-specific pyproject.toml
@@ -31,7 +35,6 @@ jobs:
           fi
       - name: Install Poetry and Export Plugin
         run: |
-          pip install poetry
           poetry self add poetry-plugin-export
       - name: Install system dependencies for wxPython
         run: |
@@ -89,6 +92,8 @@ jobs:
     name: Build Windows Wheel
     runs-on: windows-latest
     steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
       - name: Generate platform-specific pyproject.toml
         run: |
           python scripts/generate_pyproject_toml.py pyproject.toml ${{ runner.os }} > pyproject.toml.tmp
@@ -187,7 +192,6 @@ jobs:
             python3-wxgtk-webview4.0
       - name: Install Poetry and dependencies
         run: |
-          pip install poetry
           poetry self add poetry-plugin-export
           poetry export -f requirements.txt --output requirements.tmp && grep -v "wxPython" requirements.tmp > requirements.txt && rm requirements.tmp
           pip install pyinstaller
