fix(workflow): Restore dependencies for create-and-upload-release job

--- a/.github/workflows/build-and-release.yml
+++ b/.github/workflows/build-and-release.yml
@@ -339,6 +339,10 @@ jobs:
     needs:
       - build-windows-wheel
       - build-package
+      - build-linux-wheel
+      - build-macos-wheel
+      - build-deb-package
+      - build-rpm-package
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
